--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Your School Name</title>
+  <title>Jangal Sammilani Adarsha High School</title>
+  <link rel="icon" type="image/x-icon" href="school.png.jpg">
   <link rel="stylesheet" href="style.css">
   <script src="app.js"></script>
 </head>
